2.0.0-SNAPSHOT. Option based system for serializers, improved documentation and usability. SimpleAST 2.2.1