@@ -1,6 +1,6 @@
 /*
  * MCDiscordReserializer: A library for transcoding between Minecraft and Discord.
- * Copyright (C) 2020 Vankka
+ * Copyright (C) 2018-2020 Vankka
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -19,6 +19,8 @@
 package dev.vankka.mcdiscordreserializer.discord;
 
 import dev.vankka.mcdiscordreserializer.text.Text;
+import lombok.Getter;
+import lombok.Setter;
 import net.kyori.text.*;
 import net.kyori.text.event.ClickEvent;
 import net.kyori.text.format.TextDecoration;
@@ -28,39 +30,66 @@ import java.util.List;
 import java.util.function.Function;
 
 /**
- * DiscordSerializer, for serializing from MC TextComponents to Discord messages.
+ * DiscordSerializer, for serializing from Minecraft {@link Component}s to Discord messages.
  *
  * @author Vankka
+ *
+ * @see DiscordSerializerOptions
+ * @see dev.vankka.mcdiscordreserializer.rules.DiscordMarkdownRules
  */
 @SuppressWarnings({"unused", "WeakerAccess"})
 public class DiscordSerializer {
 
     /**
      * Default instance of the DiscordSerializer, incase that's all you need.
-     * Using {@link DiscordSerializer#setKeybindProvider(Function)} and {@link DiscordSerializer#setTranslationProvider(Function)} is not allowed.
+     * Using {@link DiscordSerializer#setDefaultOptions(DiscordSerializerOptions)} is not allowed.
      */
     public static final DiscordSerializer INSTANCE = new DiscordSerializer() {
         @Override
+        public void setDefaultOptions(DiscordSerializerOptions defaultOptions) {
+            throw new UnsupportedOperationException("Cannot modify public instance");
+        }
+
+        @SuppressWarnings("deprecation")
+        @Override
+        @Deprecated
         public void setKeybindProvider(Function<KeybindComponent, String> provider) {
             throw new UnsupportedOperationException("Cannot modify public instance");
         }
 
+        @SuppressWarnings("deprecation")
         @Override
+        @Deprecated
         public void setTranslationProvider(Function<TranslatableComponent, String> provider) {
             throw new UnsupportedOperationException("Cannot modify public instance");
         }
     };
 
+    /**
+     * The default {@link DiscordSerializerOptions} to use for this serializer.
+     */
+    @Getter
+    @Setter
+    private DiscordSerializerOptions defaultOptions;
     private Function<KeybindComponent, String> keybindProvider;
     private Function<TranslatableComponent, String> translationProvider;
 
     /**
-     * Constructor for creating a serializer, using {@link KeybindComponent#keybind()}
-     * and {@link TranslatableComponent#key()} for translations by default.
+     * Constructor for creating a serializer, which {@link DiscordSerializerOptions#defaults()} as defaults.
      */
     public DiscordSerializer() {
-        this.keybindProvider = KeybindComponent::keybind;
-        this.translationProvider = TranslatableComponent::key;
+        this(DiscordSerializerOptions.defaults());
+    }
+
+    /**
+     * Constructor for creating a serializer, with the specified {@link DiscordSerializerOptions} as defaults.
+     *
+     * @param defaultOptions the default serializer options (can be overridden on serialize)
+     * @see DiscordSerializerOptions#defaults()
+     * @see DiscordSerializerOptions#DiscordSerializerOptions(boolean, boolean, Function, Function)
+     */
+    public DiscordSerializer(DiscordSerializerOptions defaultOptions) {
+        this.defaultOptions = defaultOptions;
     }
 
     /**
@@ -68,9 +97,14 @@ public class DiscordSerializer {
      *
      * @param keybindProvider     The keybind provider.
      * @param translationProvider The translation provider.
+     * @deprecated Use {@link #DiscordSerializer(DiscordSerializerOptions)}
+     * {@link DiscordSerializerOptions#withKeybindProvider(Function)}
+     * {@link DiscordSerializerOptions#withTranslationProvider(Function)}
      */
+    @Deprecated
     public DiscordSerializer(Function<KeybindComponent, String> keybindProvider,
                              Function<TranslatableComponent, String> translationProvider) {
+        this.defaultOptions = DiscordSerializerOptions.defaults();
         this.keybindProvider = keybindProvider;
         this.translationProvider = translationProvider;
     }
@@ -79,7 +113,9 @@ public class DiscordSerializer {
      * Returns the keybind provider for this serializer.
      *
      * @return keybind provider, a KeybindComponent to String function
+     * @deprecated Use {@link #getDefaultOptions()} {@link DiscordSerializerOptions#getKeybindProvider()}
      */
+    @Deprecated
     public Function<KeybindComponent, String> getKeybindProvider() {
         return keybindProvider;
     }
@@ -88,7 +124,9 @@ public class DiscordSerializer {
      * Sets the keybind provider for this serializer.
      *
      * @param provider a KeybindComponent to String function
+     * @deprecated Use {@link #setDefaultOptions(DiscordSerializerOptions)} {@link DiscordSerializerOptions#withKeybindProvider(Function)}
      */
+    @Deprecated
     public void setKeybindProvider(Function<KeybindComponent, String> provider) {
         keybindProvider = provider;
     }
@@ -97,7 +135,9 @@ public class DiscordSerializer {
      * Returns the translation provider for this serializer.
      *
      * @return keybind provider, a TranslatableComponent to String function
+     * @deprecated Use {@link #getDefaultOptions()} {@link DiscordSerializerOptions#getTranslationProvider()}
      */
+    @Deprecated
     public Function<TranslatableComponent, String> getTranslationProvider() {
         return translationProvider;
     }
@@ -106,32 +146,56 @@ public class DiscordSerializer {
      * Sets the translation provider for this serializer.
      *
      * @param provider a TranslationComponent to String function
+     * @deprecated Use {@link #setDefaultOptions(DiscordSerializerOptions)} {@link DiscordSerializerOptions#withTranslationProvider(Function)}
      */
+    @Deprecated
     public void setTranslationProvider(Function<TranslatableComponent, String> provider) {
         translationProvider = provider;
     }
 
     /**
-     * Serializes TextComponent (from a chat message) to Discord formatting (markdown) without embed links.
-     * Use {@link DiscordSerializer#serialize(Component, boolean)} to serialize with embed links.
+     * Serializes a {@link Component} to Discord formatting (markdown) with this serializer's {@link DiscordSerializer#getDefaultOptions() default options}.<br/>
+     * Use {@link DiscordSerializer#serialize(Component, DiscordSerializerOptions)} to fine tune the serialization options.
      *
      * @param component The text component from a Minecraft chat message
      * @return Discord markdown formatted String
      */
     public String serialize(final Component component) {
-        return serialize(component, false);
+        DiscordSerializerOptions options = getDefaultOptions();
+        if (keybindProvider != null) {
+            options = options.withKeybindProvider(keybindProvider);
+        }
+        if (translationProvider != null) {
+            options = options.withTranslationProvider(translationProvider);
+        }
+        return serialize(component, options);
     }
 
     /**
-     * Serializes a TextComponent (from a chat message) to Discord formatting (markdown).
+     * Serializes a Component (from a chat message) to Discord formatting (markdown).
      *
      * @param component     The text component from a Minecraft chat message
      * @param embedLinks    Makes messages format as [message content](url) when there is a open_url clickEvent (for embeds)
      * @return Discord markdown formatted String
+     * @deprecated Use {@link #serialize(Component, DiscordSerializerOptions)} {@link DiscordSerializerOptions#withEmbedLinks(boolean)}
      */
+    @Deprecated
     public String serialize(final Component component, boolean embedLinks) {
+        return serialize(component, defaultOptions.withEmbedLinks(embedLinks));
+    }
+
+    /**
+     * Serializes Component (from a chat message) to Discord formatting (markdown).
+     *
+     * @param component         The text component from a Minecraft chat message
+     * @param serializerOptions The options to use for this serialization
+     * @return Discord markdown formatted String
+     * @see DiscordSerializerOptions#defaults()
+     * @see DiscordSerializerOptions#DiscordSerializerOptions(boolean, boolean, Function, Function)
+     */
+    public String serialize(final Component component, final DiscordSerializerOptions serializerOptions) {
         StringBuilder stringBuilder = new StringBuilder();
-        List<Text> texts = getTexts(new LinkedList<>(), component, new Text(), embedLinks);
+        List<Text> texts = getTexts(new LinkedList<>(), component, new Text(), serializerOptions);
         for (Text text : texts) {
             String content = text.getContent();
             if (content.isEmpty()) {
@@ -152,11 +216,15 @@ public class DiscordSerializer {
                 stringBuilder.append("__");
             }
 
-            stringBuilder.append(content.replace("(?<!\\\\)(?:\\\\\\\\)*\\*", "\\*")
-                    .replace("(?<!\\\\)(?:\\\\\\\\)*~", "\\~")
-                    .replace("(?<!\\\\)(?:\\\\\\\\)*_", "\\_")
-                    .replace("(?<!\\\\)(?:\\\\\\\\)*`", "\\`")
-                    .replace("(?<!\\\\)(?:\\\\\\\\)*\\|", "\\|"));
+            if (serializerOptions.isEscapeMarkdown()) {
+                content = content.replace("(?<!\\\\)(?:\\\\\\\\)*\\*", "\\*")
+                        .replace("(?<!\\\\)(?:\\\\\\\\)*~", "\\~")
+                        .replace("(?<!\\\\)(?:\\\\\\\\)*_", "\\_")
+                        .replace("(?<!\\\\)(?:\\\\\\\\)*`", "\\`")
+                        .replace("(?<!\\\\)(?:\\\\\\\\)*\\|", "\\|");
+            }
+
+            stringBuilder.append(content);
 
             if (text.isUnderline()) {
                 stringBuilder.append("__");
@@ -177,9 +245,9 @@ public class DiscordSerializer {
         return length < 1 ? "" : stringBuilder.substring(0, length - 1);
     }
 
-    private List<Text> getTexts(final List<Text> input, final Component component,
-                                final Text text, final boolean embedLinks) {
-        List<Text> output = new LinkedList<>(input);
+    private LinkedList<Text> getTexts(final List<Text> input, final Component component,
+                                final Text text, final DiscordSerializerOptions serializerOptions) {
+        LinkedList<Text> output = new LinkedList<>(input);
 
         String content;
         if (component instanceof KeybindComponent) {
@@ -197,7 +265,7 @@ public class DiscordSerializer {
         }
 
         ClickEvent clickEvent = component.clickEvent();
-        if (embedLinks && clickEvent != null && clickEvent.action() == ClickEvent.Action.OPEN_URL) {
+        if (serializerOptions.isEmbedLinks() && clickEvent != null && clickEvent.action() == ClickEvent.Action.OPEN_URL) {
             text.setContent("[" + content + "](" + clickEvent.value() + ")");
         } else {
             text.setContent(content);
@@ -221,10 +289,10 @@ public class DiscordSerializer {
         }
 
         if (!output.isEmpty()) {
-            Text previous = output.get(output.size() - 1);
+            Text previous = output.getLast();
             // if the formatting matches (color was different), merge the text objects to reduce length
             if (text.formattingMatches(previous)) {
-                output.remove(previous);
+                output.removeLast();
                 text.setContent(previous.getContent() + text.getContent());
             }
         }
@@ -233,7 +301,7 @@ public class DiscordSerializer {
         for (Component child : component.children()) {
             Text next = text.clone();
             next.setContent("");
-            output = getTexts(output, child, next, embedLinks);
+            output = getTexts(output, child, next, serializerOptions);
         }
 
         return output;
